[gd_scene load_steps=18 format=2]

[ext_resource path="res://main/mapedit.gd" type="Script" id=1]
[ext_resource path="res://BGcolor/white.jpg" type="Texture" id=2]
[ext_resource path="res://fonts/ldfcomicsans-font/Ldfcomicsans-jj7l.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://2ds sfx gfx/sfx/cs2d open.wav" type="AudioStream" id=4]
[ext_resource path="res://2ds sfx gfx/gfx/tombol.png" type="Texture" id=5]
[ext_resource path="res://2ds sfx gfx/gfx/wallpaper.jpg" type="Texture" id=6]
[ext_resource path="res://main/main.tres" type="DynamicFont" id=7]
[ext_resource path="res://2ds sfx gfx/gfx/dialog.png" type="Texture" id=8]
[ext_resource path="res://fonts/ldfcomicsans-font/Ldfcomicsanslight-6dZo.ttf" type="DynamicFontData" id=9]

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 81, 70, 241, 6 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 4, 0, 220.953, 39 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1.73333, 44.8444, 223.267, 37.6541 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( -0.153473, 240.859, 159.221, 45.1126 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( -2, 187, 163, 49 )

[sub_resource type="DynamicFont" id=7]
size = 46
outline_size = 3
outline_color = Color( 0.54902, 0.54902, 0.54902, 1 )
font_data = ExtResource( 9 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 90, 160, 40 )

[node name="mymaps" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = 2.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 11.0
margin_top = -230.0
margin_right = -10.0
margin_bottom = -224.0
texture = SubResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 40.0

[node name="back" type="TouchScreenButton" parent="VBoxContainer"]
position = Vector2( 382, -44 )
scale = Vector2( 1.199, 1.69601 )
normal = SubResource( 1 )
pressed = SubResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/back"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_right = -61.0
margin_bottom = -10.0
rect_scale = Vector2( 1.3916, 1.3916 )
custom_fonts/font = SubResource( 3 )
text = "Back"
align = 1
valign = 1

[node name="open" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="new" type="TouchScreenButton" parent="HBoxContainer"]
position = Vector2( 14, 9 )
scale = Vector2( 1.04444, 1.04444 )
normal = SubResource( 6 )

[node name="Label" type="Label" parent="HBoxContainer/new"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 7 )
text = "New map"
align = 1
valign = 1

[node name="my" type="TouchScreenButton" parent="HBoxContainer"]
position = Vector2( 226, 8 )
normal = SubResource( 5 )

[node name="Label" type="Label" parent="HBoxContainer/my"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 7 )
text = "My maps"
align = 1
valign = 1

[node name="maps" type="TextureRect" parent="."]
margin_left = 18.0
margin_top = 152.0
margin_right = 368.0
margin_bottom = 774.0
rect_scale = Vector2( 2.08986, 0.556498 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="maps"]
position = Vector2( 174.575, 308.979 )
scale = Vector2( 1.81874, 5.55018 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="maps"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -51.6114
margin_top = -75.846
margin_right = 194.389
margin_bottom = -146.846
rect_scale = Vector2( 0.423598, 1.38573 )
custom_colors/font_color = Color( 0.486275, 0.486275, 0.486275, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
text = "No custom maps..."
align = 1
valign = 1

[node name="tombol" type="VBoxContainer" parent="."]
margin_top = 21.0
margin_right = 40.0
margin_bottom = 61.0

[node name="load" type="TouchScreenButton" parent="tombol"]
position = Vector2( 762, 126 )
scale = Vector2( 1.54065, 1.54065 )
normal = SubResource( 8 )

[node name="Label" type="Label" parent="tombol/load"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 7 )
text = "Load map"
align = 1
valign = 1

[node name="upload" type="TouchScreenButton" parent="tombol"]
position = Vector2( 762, 199 )
scale = Vector2( 1.54065, 1.54065 )
normal = SubResource( 8 )

[node name="Label" type="Label" parent="tombol/upload"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.49075
margin_top = 6.49075
margin_right = 33.4908
margin_bottom = 6.49075
rect_scale = Vector2( 0.787758, 0.787758 )
custom_fonts/font = ExtResource( 7 )
text = "Upload to server"
align = 1
valign = 1

[node name="change" type="TouchScreenButton" parent="tombol"]
position = Vector2( 762, 275 )
scale = Vector2( 1.54065, 1.54065 )
normal = SubResource( 8 )

[node name="Label" type="Label" parent="tombol/change"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 7 )
text = "Change name"
align = 1
valign = 1

[node name="deletem" type="TouchScreenButton" parent="tombol"]
position = Vector2( 762, 345 )
scale = Vector2( 1.54065, 1.54065 )
normal = SubResource( 8 )

[node name="Label" type="Label" parent="tombol/deletem"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 7 )
text = "Delete map"
align = 1
valign = 1

[node name="deletes" type="TouchScreenButton" parent="tombol"]
position = Vector2( 762, 419 )
scale = Vector2( 1.54065, 1.54065 )
normal = SubResource( 8 )

[node name="Label" type="Label" parent="tombol/deletes"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.24539
margin_top = 3.89444
margin_right = 58.2454
margin_bottom = 3.89444
rect_scale = Vector2( 0.71322, 0.71322 )
custom_fonts/font = ExtResource( 7 )
text = "Delete from server"
align = 1
valign = 1

[node name="detailmap" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="map" type="Label" parent="detailmap"]
margin_left = 20.0
margin_top = 101.0
margin_right = 70.0
margin_bottom = 132.0
rect_scale = Vector2( 1.32263, 1.32263 )
custom_fonts/font = ExtResource( 7 )
text = "Map"

[node name="size" type="Label" parent="detailmap"]
margin_left = 246.0
margin_top = 101.0
margin_right = 296.0
margin_bottom = 132.0
rect_scale = Vector2( 1.32263, 1.32263 )
custom_fonts/font = ExtResource( 7 )
text = "Size"

[node name="updt" type="Label" parent="detailmap"]
margin_left = 408.0
margin_top = 101.0
margin_right = 539.0
margin_bottom = 132.0
rect_scale = Vector2( 1.32263, 1.32263 )
custom_fonts/font = ExtResource( 7 )
text = "Last update"

[connection signal="released" from="VBoxContainer/back" to="." method="_on_back_released"]
[connection signal="pressed" from="HBoxContainer/new" to="." method="_on_new_pressed"]
